FIX: unify y-max in plots

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -791,12 +791,17 @@
     "        lines[3].set_ydata(dpd_values_s2)\n",
     "        lines[4].set_ydata(amp_values_s3)\n",
     "        lines[5].set_ydata(dpd_values_s3)\n",
-    "    y1_max = max(jnp.nanmax(amp_values_s1), jnp.nanmax(dpd_values_s1))\n",
-    "    y2_max = max(jnp.nanmax(amp_values_s2), jnp.nanmax(dpd_values_s2))\n",
-    "    y3_max = max(jnp.nanmax(amp_values_s3), jnp.nanmax(dpd_values_s3))\n",
-    "    ax1.set_ylim(0, 1.05 * y1_max)\n",
-    "    ax2.set_ylim(0, 1.05 * y2_max)\n",
-    "    ax3.set_ylim(0, 1.05 * y3_max)\n",
+    "    y_max = max(\n",
+    "        jnp.nanmax(amp_values_s1),\n",
+    "        jnp.nanmax(dpd_values_s1),\n",
+    "        jnp.nanmax(amp_values_s2),\n",
+    "        jnp.nanmax(dpd_values_s2),\n",
+    "        jnp.nanmax(amp_values_s3),\n",
+    "        jnp.nanmax(dpd_values_s3),\n",
+    "    )\n",
+    "    ax1.set_ylim(0, 1.05 * y_max)\n",
+    "    ax2.set_ylim(0, 1.05 * y_max)\n",
+    "    ax3.set_ylim(0, 1.05 * y_max)\n",
     "\n",
     "    fig.canvas.draw_idle()\n",
     "\n",
