MAINT: unify binning

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -727,36 +727,37 @@
     "    )\n",
     "    dpd_intensities = compute_sub_intensities(dpd_func, dpd_phsp, resonance_names)\n",
     "\n",
+    "    edges = jnp.linspace(0.98, 1.38, num=50)\n",
     "    amp_values_s1, edges_s1 = jnp.histogram(\n",
     "        ampform_phsp[\"m_12\"].real,\n",
-    "        bins=50,\n",
+    "        bins=edges,\n",
     "        weights=ampform_intensities,\n",
     "    )\n",
     "    dpd_values_s1, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_12\"].real,\n",
-    "        bins=edges_s1,\n",
+    "        bins=edges,\n",
     "        weights=dpd_intensities,\n",
     "    )\n",
     "\n",
     "    amp_values_s2, edges_s2 = jnp.histogram(\n",
     "        ampform_phsp[\"m_02\"].real,\n",
-    "        bins=50,\n",
+    "        bins=edges,\n",
     "        weights=ampform_intensities,\n",
     "    )\n",
     "    dpd_values_s2, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_02\"].real,\n",
-    "        bins=edges_s2,\n",
+    "        bins=edges,\n",
     "        weights=dpd_intensities,\n",
     "    )\n",
     "\n",
     "    amp_values_s3, edges_s3 = jnp.histogram(\n",
     "        ampform_phsp[\"m_01\"].real,\n",
-    "        bins=50,\n",
+    "        bins=edges,\n",
     "        weights=ampform_intensities,\n",
     "    )\n",
     "    dpd_values_s3, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_01\"].real,\n",
-    "        bins=edges_s3,\n",
+    "        bins=edges,\n",
     "        weights=dpd_intensities,\n",
     "    )\n",
     "\n",
