DOC: show combination of first two resonances

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -643,7 +643,7 @@
     "resonance_selector = SelectMultiple(\n",
     "    description=\"Resonance\",\n",
     "    options={to_unicode(p): p.latex for p in resonances},\n",
-    "    value=[resonances[0].latex],\n",
+    "    value=[resonances[0].latex, resonances[1].latex],\n",
     "    layout=Layout(\n",
     "        height=f\"{14 * (len(resonances)+1)}pt\",\n",
     "        width=\"auto\",\n",
