FIX: avoid variable overwriting

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -718,12 +718,10 @@
     "def plot_contributions(**kwargs) -> None:\n",
     "    kwargs.pop(\"resonance_selector\")\n",
     "    resonance_names = list(resonance_selector.value)\n",
-    "    dpd_kwargs = {k: v for k, v in kwargs.items() if k in dpd_func.parameters}\n",
-    "    ampform_kwargs = {\n",
-    "        k: v for k, v in kwargs.items() if k in ampform_func.parameters\n",
-    "    }\n",
-    "    ampform_func.update_parameters(ampform_kwargs)\n",
-    "    dpd_func.update_parameters(dpd_kwargs)\n",
+    "    dpd_pars = {k: v for k, v in kwargs.items() if k in dpd_func.parameters}\n",
+    "    ampform_pars = {k: v for k, v in kwargs.items() if k in ampform_func.parameters}\n",
+    "    ampform_func.update_parameters(ampform_pars)\n",
+    "    dpd_func.update_parameters(dpd_pars)\n",
     "    ampform_intensities = compute_sub_intensities(\n",
     "        ampform_func, ampform_phsp, resonance_names\n",
     "    )\n",
