FEAT: print expressions in widget

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -803,6 +803,29 @@
     "\n",
     "    fig.canvas.draw_idle()\n",
     "\n",
+    "    def get_symbol_values(\n",
+    "        expr: sp.Expr, parameters: dict[str, ParameterValue]\n",
+    "    ) -> dict[sp.Symbol, sp.Rational]:\n",
+    "        parameters = {\n",
+    "            key: value if any(r in key for r in resonance_names) else 0\n",
+    "            for key, value in parameters.items()\n",
+    "        }\n",
+    "        return {\n",
+    "            s: sp.Rational(parameters[s.name])\n",
+    "            for s in expr.free_symbols\n",
+    "            if s.name in parameters\n",
+    "        }\n",
+    "\n",
+    "    ampform_symbols = get_symbol_values(ampform_intensity_expr, ampform_pars)\n",
+    "    dpd_symbols = get_symbol_values(dpd_intensity_expr, dpd_pars)\n",
+    "    src = Rf\"\"\"\n",
+    "    \\begin{{eqnarray}}\n",
+    "      \\text{{AmpForm:}} && {sp.latex(ampform_intensity_expr.xreplace(ampform_symbols))} \\\\\n",
+    "      \\text{{DPD:}}     && {sp.latex(dpd_intensity_expr.xreplace(dpd_symbols))} \\\\\n",
+    "    \\end{{eqnarray}}\n",
+    "    \"\"\"\n",
+    "    display(Latex(src))\n",
+    "\n",
     "\n",
     "output = interactive_output(\n",
     "    plot_contributions,\n",
