MAINT: generalise comparison notebooks

--- a/docs/jpsi2pipipi.ipynb
+++ b/docs/jpsi2pipipi.ipynb
@@ -118,11 +118,11 @@
     "    for p in PDG\n",
     "    if p.parity is not None\n",
     "}\n",
-    "Jpsi = PARTICLE_DB[\"J/psi(1S)\"]\n",
-    "pi0 = PARTICLE_DB[\"pi0\"]\n",
-    "pim = PARTICLE_DB[\"pi-\"]\n",
-    "pip = PARTICLE_DB[\"pi+\"]\n",
-    "PARTICLE_TO_ID = {Jpsi: 0, pi0: 1, pim: 2, pip: 3}\n",
+    "INITIAL_STATE = PARTICLE_DB[\"J/psi(1S)\"]\n",
+    "FS_zero = PARTICLE_DB[\"pi0\"]\n",
+    "FS_neg = PARTICLE_DB[\"pi-\"]\n",
+    "FS_pos = PARTICLE_DB[\"pi+\"]\n",
+    "PARTICLE_TO_ID = {INITIAL_STATE: 0, FS_zero: 1, FS_neg: 2, FS_pos: 3}\n",
     "_, *FINAL_STATE = PARTICLE_TO_ID\n",
     "Markdown(as_markdown_table(list(PARTICLE_TO_ID)))"
    ]
@@ -144,7 +144,7 @@
    "outputs": [],
    "source": [
     "reaction = qrules.generate_transitions(\n",
-    "    initial_state=Jpsi.name,\n",
+    "    initial_state=INITIAL_STATE.name,\n",
     "    final_state=[p.name for p in FINAL_STATE],\n",
     "    allowed_intermediate_particles=[\"a(0)(980)\", \"rho(770)\"],\n",
     "    mass_conservation_factor=0,\n",
@@ -203,18 +203,18 @@
     "\n",
     "def _create_isobar(resonance: Particle, min_ls: bool) -> list[ThreeBodyDecayChain]:\n",
     "    if resonance.name.endswith(\"-\"):\n",
-    "        child1, child2, spectator = pi0, pim, pip\n",
+    "        child1, child2, spectator = FS_zero, FS_neg, FS_pos\n",
     "    elif resonance.name.endswith(\"+\"):\n",
-    "        child1, child2, spectator = pip, pi0, pim\n",
+    "        child1, child2, spectator = FS_pos, FS_zero, FS_neg\n",
     "    else:\n",
-    "        child1, child2, spectator = pip, pim, pi0\n",
+    "        child1, child2, spectator = FS_pos, FS_neg, FS_zero\n",
     "    prod_ls_couplings = _generate_ls(\n",
-    "        Jpsi, resonance, spectator, conserve_parity=False\n",
+    "        INITIAL_STATE, resonance, spectator, conserve_parity=False\n",
     "    )\n",
     "    dec_ls_couplings = _generate_ls(resonance, child1, child2, conserve_parity=True)\n",
     "    if min_ls:\n",
     "        decay = IsobarNode(\n",
-    "            parent=Jpsi,\n",
+    "            parent=INITIAL_STATE,\n",
     "            child1=IsobarNode(\n",
     "                parent=resonance,\n",
     "                child1=child1,\n",
@@ -228,7 +228,7 @@
     "    chains = []\n",
     "    for dec_ls, prod_ls in itertools.product(dec_ls_couplings, prod_ls_couplings):\n",
     "        decay = IsobarNode(\n",
-    "            parent=Jpsi,\n",
+    "            parent=INITIAL_STATE,\n",
     "            child1=IsobarNode(\n",
     "                parent=resonance,\n",
     "                child1=child1,\n",
@@ -352,10 +352,8 @@
    "outputs": [],
    "source": [
     "masses = {\n",
-    "    sp.Symbol(\"m0\", nonnegative=True): round(Jpsi.mass, 7),\n",
-    "    sp.Symbol(\"m1\", nonnegative=True): round(pi0.mass, 7),\n",
-    "    sp.Symbol(\"m2\", nonnegative=True): round(pim.mass, 7),\n",
-    "    sp.Symbol(\"m3\", nonnegative=True): round(pip.mass, 7),\n",
+    "    sp.Symbol(f\"m{i}\", nonnegative=True): round(p.mass, 7)\n",
+    "    for p, i in PARTICLE_TO_ID.items()\n",
     "}\n",
     "dpd_model.parameter_defaults.update(masses)\n",
     "Latex(aslatex(masses))"
