--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -118,11 +118,11 @@
     "    for p in PDG\n",
     "    if p.parity is not None\n",
     "}\n",
-    "D0 = PARTICLE_DB[\"D0\"]\n",
-    "K0 = PARTICLE_DB[\"K0\"]\n",
-    "Km = PARTICLE_DB[\"K-\"]\n",
-    "Kp = PARTICLE_DB[\"K+\"]\n",
-    "PARTICLE_TO_ID = {D0: 0, K0: 1, Km: 2, Kp: 3}\n",
+    "INITIAL_STATE = PARTICLE_DB[\"D0\"]\n",
+    "FS_zero = PARTICLE_DB[\"K0\"]\n",
+    "FS_neg = PARTICLE_DB[\"K-\"]\n",
+    "FS_pos = PARTICLE_DB[\"K+\"]\n",
+    "PARTICLE_TO_ID = {INITIAL_STATE: 0, FS_zero: 1, FS_neg: 2, FS_pos: 3}\n",
     "_, *FINAL_STATE = PARTICLE_TO_ID\n",
     "Markdown(as_markdown_table(list(PARTICLE_TO_ID)))"
    ]
@@ -144,7 +144,7 @@
    "outputs": [],
    "source": [
     "reaction = qrules.generate_transitions(\n",
-    "    initial_state=\"D0\",\n",
+    "    initial_state=INITIAL_STATE.name,\n",
     "    final_state=[p.name for p in FINAL_STATE],\n",
     "    allowed_intermediate_particles=[\"a(0)\", \"f(0)\", \"K*\"],\n",
     "    mass_conservation_factor=0.2,\n",
@@ -203,16 +203,18 @@
     "\n",
     "def _create_isobar(resonance: Particle, min_ls: bool) -> list[ThreeBodyDecayChain]:\n",
     "    if resonance.name.endswith(\"-\"):\n",
-    "        child1, child2, spectator = K0, Km, Kp\n",
+    "        child1, child2, spectator = FS_zero, FS_neg, FS_pos\n",
     "    elif resonance.name.endswith(\"+\"):\n",
-    "        child1, child2, spectator = Kp, K0, Km\n",
+    "        child1, child2, spectator = FS_pos, FS_zero, FS_neg\n",
     "    else:\n",
-    "        child1, child2, spectator = Kp, Km, K0\n",
-    "    prod_ls_couplings = _generate_ls(D0, resonance, spectator, conserve_parity=False)\n",
+    "        child1, child2, spectator = FS_pos, FS_neg, FS_zero\n",
+    "    prod_ls_couplings = _generate_ls(\n",
+    "        INITIAL_STATE, resonance, spectator, conserve_parity=False\n",
+    "    )\n",
     "    dec_ls_couplings = _generate_ls(resonance, child1, child2, conserve_parity=True)\n",
     "    if min_ls:\n",
     "        decay = IsobarNode(\n",
-    "            parent=D0,\n",
+    "            parent=INITIAL_STATE,\n",
     "            child1=IsobarNode(\n",
     "                parent=resonance,\n",
     "                child1=child1,\n",
@@ -226,7 +228,7 @@
     "    chains = []\n",
     "    for dec_ls, prod_ls in itertools.product(dec_ls_couplings, prod_ls_couplings):\n",
     "        decay = IsobarNode(\n",
-    "            parent=D0,\n",
+    "            parent=INITIAL_STATE,\n",
     "            child1=IsobarNode(\n",
     "                parent=resonance,\n",
     "                child1=child1,\n",
@@ -360,10 +362,8 @@
    "outputs": [],
    "source": [
     "masses = {\n",
-    "    sp.Symbol(\"m0\", nonnegative=True): round(D0.mass, 7),\n",
-    "    sp.Symbol(\"m1\", nonnegative=True): round(K0.mass, 7),\n",
-    "    sp.Symbol(\"m2\", nonnegative=True): round(Km.mass, 7),\n",
-    "    sp.Symbol(\"m3\", nonnegative=True): round(Kp.mass, 7),\n",
+    "    sp.Symbol(f\"m{i}\", nonnegative=True): round(p.mass, 7)\n",
+    "    for p, i in PARTICLE_TO_ID.items()\n",
     "}\n",
     "dpd_model.parameter_defaults.update(masses)\n",
     "Latex(aslatex(masses))"
