DOC: render expression in comparison widget (#57)
* DOC: show combination of first two resonances

* FIX: avoid variable overwriting

* FIX: match final state order

* FIX: unify y-max in plots

* MAINT: remove commented code

* MAINT: unify binning

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -145,7 +145,7 @@
    "source": [
     "reaction = qrules.generate_transitions(\n",
     "    initial_state=\"D0\",\n",
-    "    final_state=[\"K0\", \"K-\", \"K+\"],\n",
+    "    final_state=[p.name for p in FINAL_STATE],\n",
     "    allowed_intermediate_particles=[\"a(0)\", \"f(0)\", \"K*\"],\n",
     "    mass_conservation_factor=0.2,\n",
     "    formalism=\"helicity\",\n",
@@ -643,7 +643,7 @@
     "resonance_selector = SelectMultiple(\n",
     "    description=\"Resonance\",\n",
     "    options={to_unicode(p): p.latex for p in resonances},\n",
-    "    value=[resonances[0].latex],\n",
+    "    value=[resonances[0].latex, resonances[1].latex],\n",
     "    layout=Layout(\n",
     "        height=f\"{14 * (len(resonances)+1)}pt\",\n",
     "        width=\"auto\",\n",
@@ -718,54 +718,47 @@
     "def plot_contributions(**kwargs) -> None:\n",
     "    kwargs.pop(\"resonance_selector\")\n",
     "    resonance_names = list(resonance_selector.value)\n",
-    "    dpd_kwargs = {k: v for k, v in kwargs.items() if k in dpd_func.parameters}\n",
-    "    ampform_kwargs = {\n",
-    "        k: v for k, v in kwargs.items() if k in ampform_func.parameters\n",
-    "    }\n",
-    "    ampform_func.update_parameters(ampform_kwargs)\n",
-    "    dpd_func.update_parameters(dpd_kwargs)\n",
+    "    dpd_pars = {k: v for k, v in kwargs.items() if k in dpd_func.parameters}\n",
+    "    ampform_pars = {k: v for k, v in kwargs.items() if k in ampform_func.parameters}\n",
+    "    ampform_func.update_parameters(ampform_pars)\n",
+    "    dpd_func.update_parameters(dpd_pars)\n",
     "    ampform_intensities = compute_sub_intensities(\n",
     "        ampform_func, ampform_phsp, resonance_names\n",
     "    )\n",
     "    dpd_intensities = compute_sub_intensities(dpd_func, dpd_phsp, resonance_names)\n",
     "\n",
+    "    edges = jnp.linspace(0.98, 1.38, num=50)\n",
     "    amp_values_s1, edges_s1 = jnp.histogram(\n",
     "        ampform_phsp[\"m_12\"].real,\n",
-    "        bins=50,\n",
+    "        bins=edges,\n",
     "        weights=ampform_intensities,\n",
-    "        # density=True,\n",
     "    )\n",
     "    dpd_values_s1, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_12\"].real,\n",
-    "        bins=edges_s1,\n",
+    "        bins=edges,\n",
     "        weights=dpd_intensities,\n",
-    "        # density=True,\n",
     "    )\n",
     "\n",
     "    amp_values_s2, edges_s2 = jnp.histogram(\n",
     "        ampform_phsp[\"m_02\"].real,\n",
-    "        bins=50,\n",
+    "        bins=edges,\n",
     "        weights=ampform_intensities,\n",
-    "        # density=True,\n",
     "    )\n",
     "    dpd_values_s2, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_02\"].real,\n",
-    "        bins=edges_s2,\n",
+    "        bins=edges,\n",
     "        weights=dpd_intensities,\n",
-    "        # density=True,\n",
     "    )\n",
     "\n",
     "    amp_values_s3, edges_s3 = jnp.histogram(\n",
     "        ampform_phsp[\"m_01\"].real,\n",
-    "        bins=50,\n",
+    "        bins=edges,\n",
     "        weights=ampform_intensities,\n",
-    "        # density=True,\n",
     "    )\n",
     "    dpd_values_s3, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_01\"].real,\n",
-    "        bins=edges_s3,\n",
+    "        bins=edges,\n",
     "        weights=dpd_intensities,\n",
-    "        # density=True,\n",
     "    )\n",
     "\n",
     "    global lines\n",
@@ -791,14 +784,42 @@
     "        lines[3].set_ydata(dpd_values_s2)\n",
     "        lines[4].set_ydata(amp_values_s3)\n",
     "        lines[5].set_ydata(dpd_values_s3)\n",
-    "    y1_max = max(jnp.nanmax(amp_values_s1), jnp.nanmax(dpd_values_s1))\n",
-    "    y2_max = max(jnp.nanmax(amp_values_s2), jnp.nanmax(dpd_values_s2))\n",
-    "    y3_max = max(jnp.nanmax(amp_values_s3), jnp.nanmax(dpd_values_s3))\n",
-    "    ax1.set_ylim(0, 1.05 * y1_max)\n",
-    "    ax2.set_ylim(0, 1.05 * y2_max)\n",
-    "    ax3.set_ylim(0, 1.05 * y3_max)\n",
+    "    y_max = max(\n",
+    "        jnp.nanmax(amp_values_s1),\n",
+    "        jnp.nanmax(dpd_values_s1),\n",
+    "        jnp.nanmax(amp_values_s2),\n",
+    "        jnp.nanmax(dpd_values_s2),\n",
+    "        jnp.nanmax(amp_values_s3),\n",
+    "        jnp.nanmax(dpd_values_s3),\n",
+    "    )\n",
+    "    ax1.set_ylim(0, 1.05 * y_max)\n",
+    "    ax2.set_ylim(0, 1.05 * y_max)\n",
+    "    ax3.set_ylim(0, 1.05 * y_max)\n",
     "\n",
     "    fig.canvas.draw_idle()\n",
+    "\n",
+    "    def get_symbol_values(\n",
+    "        expr: sp.Expr, parameters: dict[str, ParameterValue]\n",
+    "    ) -> dict[sp.Symbol, sp.Rational]:\n",
+    "        parameters = {\n",
+    "            key: value if any(r in key for r in resonance_names) else 0\n",
+    "            for key, value in parameters.items()\n",
+    "        }\n",
+    "        return {\n",
+    "            s: sp.Rational(parameters[s.name])\n",
+    "            for s in expr.free_symbols\n",
+    "            if s.name in parameters\n",
+    "        }\n",
+    "\n",
+    "    ampform_symbols = get_symbol_values(ampform_intensity_expr, ampform_pars)\n",
+    "    dpd_symbols = get_symbol_values(dpd_intensity_expr, dpd_pars)\n",
+    "    src = Rf\"\"\"\n",
+    "    \\begin{{eqnarray}}\n",
+    "      \\text{{AmpForm:}} && {sp.latex(ampform_intensity_expr.xreplace(ampform_symbols))} \\\\\n",
+    "      \\text{{DPD:}}     && {sp.latex(dpd_intensity_expr.xreplace(dpd_symbols))} \\\\\n",
+    "    \\end{{eqnarray}}\n",
+    "    \"\"\"\n",
+    "    display(Latex(src))\n",
     "\n",
     "\n",
     "output = interactive_output(\n",
