--- a/docs/jpsi2pipipi.ipynb
+++ b/docs/jpsi2pipipi.ipynb
@@ -362,6 +362,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
