MAINT: generalize naming of Mandelstam-related variables

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -704,13 +704,13 @@
    "source": [
     "%matplotlib widget\n",
     "plt.rc(\"font\", size=12)\n",
-    "fig, axes = plt.subplots(ncols=3, figsize=(16, 5), sharey=True)\n",
-    "ax1, ax2, ax3 = axes\n",
+    "fig, axes = plt.subplots(figsize=(16, 5), ncols=3, sharey=True)\n",
+    "ax_s1, ax_s2, ax_s3 = axes\n",
     "final_state = ampform_model.reaction_info.final_state\n",
-    "ax1.set_ylabel(\"Intensity (a.u.)\")\n",
-    "ax1.set_xlabel(Rf\"$m({FINAL_STATE[1].latex}, {FINAL_STATE[2].latex})$\")\n",
-    "ax2.set_xlabel(Rf\"$m({FINAL_STATE[0].latex}, {FINAL_STATE[2].latex})$\")\n",
-    "ax3.set_xlabel(Rf\"$m({FINAL_STATE[0].latex}, {FINAL_STATE[1].latex})$\")\n",
+    "ax_s1.set_ylabel(\"Intensity (a.u.)\")\n",
+    "ax_s1.set_xlabel(f\"$m({FINAL_STATE[1].latex}, {FINAL_STATE[2].latex})$\")\n",
+    "ax_s2.set_xlabel(f\"$m({FINAL_STATE[0].latex}, {FINAL_STATE[2].latex})$\")\n",
+    "ax_s3.set_xlabel(f\"$m({FINAL_STATE[0].latex}, {FINAL_STATE[1].latex})$\")\n",
     "fig.tight_layout()\n",
     "\n",
     "lines = None\n",
@@ -728,37 +728,35 @@
     "    )\n",
     "    dpd_intensities = compute_sub_intensities(dpd_func, dpd_phsp, resonance_names)\n",
     "\n",
-    "    edges = jnp.linspace(0.98, 1.38, num=50)\n",
-    "    amp_values_s1, edges_s1 = jnp.histogram(\n",
+    "    s_edges = jnp.linspace(0.98, 1.38, num=50)\n",
+    "    amp_values_s1, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_12\"].real,\n",
-    "        bins=edges,\n",
+    "        bins=s_edges,\n",
     "        weights=ampform_intensities,\n",
     "    )\n",
     "    dpd_values_s1, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_12\"].real,\n",
-    "        bins=edges,\n",
+    "        bins=s_edges,\n",
     "        weights=dpd_intensities,\n",
     "    )\n",
-    "\n",
-    "    amp_values_s2, edges_s2 = jnp.histogram(\n",
+    "    amp_values_s2, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_02\"].real,\n",
-    "        bins=edges,\n",
+    "        bins=s_edges,\n",
     "        weights=ampform_intensities,\n",
     "    )\n",
     "    dpd_values_s2, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_02\"].real,\n",
-    "        bins=edges,\n",
+    "        bins=s_edges,\n",
     "        weights=dpd_intensities,\n",
     "    )\n",
-    "\n",
-    "    amp_values_s3, edges_s3 = jnp.histogram(\n",
+    "    amp_values_s3, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_01\"].real,\n",
-    "        bins=edges,\n",
+    "        bins=s_edges,\n",
     "        weights=ampform_intensities,\n",
     "    )\n",
     "    dpd_values_s3, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_01\"].real,\n",
-    "        bins=edges,\n",
+    "        bins=s_edges,\n",
     "        weights=dpd_intensities,\n",
     "    )\n",
     "\n",
@@ -766,18 +764,16 @@
     "    amp_kwargs = dict(color=\"r\", label=\"ampform\", linestyle=\"solid\")\n",
     "    dpd_kwargs = dict(color=\"blue\", label=\"dpd\", linestyle=\"dotted\")\n",
     "    if lines is None:\n",
-    "        x1 = (edges_s1[:-1] + edges_s1[1:]) / 2\n",
-    "        x2 = (edges_s2[:-1] + edges_s2[1:]) / 2\n",
-    "        x3 = (edges_s3[:-1] + edges_s3[1:]) / 2\n",
+    "        sx = (s_edges[:-1] + s_edges[1:]) / 2\n",
     "        lines = [\n",
-    "            ax1.step(x1, amp_values_s1, **amp_kwargs)[0],\n",
-    "            ax1.step(x1, dpd_values_s1, **dpd_kwargs)[0],\n",
-    "            ax2.step(x2, amp_values_s2, **amp_kwargs)[0],\n",
-    "            ax2.step(x2, dpd_values_s2, **dpd_kwargs)[0],\n",
-    "            ax3.step(x3, amp_values_s3, **amp_kwargs)[0],\n",
-    "            ax3.step(x3, dpd_values_s3, **dpd_kwargs)[0],\n",
+    "            ax_s1.step(sx, amp_values_s1, **amp_kwargs)[0],\n",
+    "            ax_s1.step(sx, dpd_values_s1, **dpd_kwargs)[0],\n",
+    "            ax_s2.step(sx, amp_values_s2, **amp_kwargs)[0],\n",
+    "            ax_s2.step(sx, dpd_values_s2, **dpd_kwargs)[0],\n",
+    "            ax_s3.step(sx, amp_values_s3, **amp_kwargs)[0],\n",
+    "            ax_s3.step(sx, dpd_values_s3, **dpd_kwargs)[0],\n",
     "        ]\n",
-    "        ax1.legend(loc=\"upper right\")\n",
+    "        ax_s1.legend(loc=\"upper right\")\n",
     "    else:\n",
     "        lines[0].set_ydata(amp_values_s1)\n",
     "        lines[1].set_ydata(dpd_values_s1)\n",
@@ -785,7 +781,7 @@
     "        lines[3].set_ydata(dpd_values_s2)\n",
     "        lines[4].set_ydata(amp_values_s3)\n",
     "        lines[5].set_ydata(dpd_values_s3)\n",
-    "    y_max = max(\n",
+    "    sy_max = max(\n",
     "        jnp.nanmax(amp_values_s1),\n",
     "        jnp.nanmax(dpd_values_s1),\n",
     "        jnp.nanmax(amp_values_s2),\n",
@@ -793,9 +789,9 @@
     "        jnp.nanmax(amp_values_s3),\n",
     "        jnp.nanmax(dpd_values_s3),\n",
     "    )\n",
-    "    ax1.set_ylim(0, 1.05 * y_max)\n",
-    "    ax2.set_ylim(0, 1.05 * y_max)\n",
-    "    ax3.set_ylim(0, 1.05 * y_max)\n",
+    "    ax_s1.set_ylim(0, 1.05 * sy_max)\n",
+    "    ax_s2.set_ylim(0, 1.05 * sy_max)\n",
+    "    ax_s3.set_ylim(0, 1.05 * sy_max)\n",
     "\n",
     "    fig.canvas.draw_idle()\n",
     "\n",
