--- a/docs/jpsi2pipipi.ipynb
+++ b/docs/jpsi2pipipi.ipynb
@@ -207,7 +207,7 @@
     "    elif resonance.name.endswith(\"+\"):\n",
     "        child1, child2, spectator = FS_pos, FS_zero, FS_neg\n",
     "    else:\n",
-    "        child1, child2, spectator = FS_pos, FS_neg, FS_zero\n",
+    "        child1, child2, spectator = FS_neg, FS_pos, FS_zero\n",
     "    prod_ls_couplings = _generate_ls(\n",
     "        INITIAL_STATE, resonance, spectator, conserve_parity=False\n",
     "    )\n",
