DOC: show helicity angle distributions

--- a/docs/jpsi2pipipi.ipynb
+++ b/docs/jpsi2pipipi.ipynb
@@ -687,13 +687,22 @@
    "source": [
     "%matplotlib widget\n",
     "plt.rc(\"font\", size=12)\n",
-    "fig, axes = plt.subplots(figsize=(16, 5), ncols=3, sharey=True)\n",
-    "ax_s1, ax_s2, ax_s3 = axes\n",
+    "fig, axes = plt.subplots(figsize=(16, 8), ncols=3, nrows=2)\n",
+    "(\n",
+    "    (ax_s1, ax_s2, ax_s3),\n",
+    "    (ax_t1, ax_t2, ax_t3),\n",
+    ") = axes\n",
     "final_state = ampform_model.reaction_info.final_state\n",
-    "ax_s1.set_ylabel(\"Intensity (a.u.)\")\n",
+    "for ax in axes[:, 0].flatten():\n",
+    "    ax.set_ylabel(\"Intensity (a.u.)\")\n",
+    "for ax in axes[:, 1:].flatten():\n",
+    "    ax.set_yticks([])\n",
     "ax_s1.set_xlabel(f\"$m({FINAL_STATE[1].latex}, {FINAL_STATE[2].latex})$\")\n",
     "ax_s2.set_xlabel(f\"$m({FINAL_STATE[0].latex}, {FINAL_STATE[2].latex})$\")\n",
     "ax_s3.set_xlabel(f\"$m({FINAL_STATE[0].latex}, {FINAL_STATE[1].latex})$\")\n",
+    "ax_t1.set_xlabel(Rf\"$\\theta({FINAL_STATE[1].latex}, {FINAL_STATE[2].latex})$\")\n",
+    "ax_t2.set_xlabel(Rf\"$\\theta({FINAL_STATE[0].latex}, {FINAL_STATE[2].latex})$\")\n",
+    "ax_t3.set_xlabel(Rf\"$\\theta({FINAL_STATE[0].latex}, {FINAL_STATE[1].latex})$\")\n",
     "fig.tight_layout()\n",
     "\n",
     "lines = None\n",
@@ -743,11 +752,44 @@
     "        weights=dpd_intensities,\n",
     "    )\n",
     "\n",
+    "    t_edges = jnp.linspace(0, jnp.pi, num=50)\n",
+    "    amp_values_t1, _ = jnp.histogram(\n",
+    "        dpd_phsp[\"theta_23\"].real,\n",
+    "        bins=t_edges,\n",
+    "        weights=ampform_intensities,\n",
+    "    )\n",
+    "    dpd_values_t1, _ = jnp.histogram(\n",
+    "        dpd_phsp[\"theta_23\"].real,\n",
+    "        bins=t_edges,\n",
+    "        weights=dpd_intensities,\n",
+    "    )\n",
+    "    amp_values_t2, _ = jnp.histogram(\n",
+    "        dpd_phsp[\"theta_31\"].real,\n",
+    "        bins=t_edges,\n",
+    "        weights=ampform_intensities,\n",
+    "    )\n",
+    "    dpd_values_t2, _ = jnp.histogram(\n",
+    "        dpd_phsp[\"theta_31\"].real,\n",
+    "        bins=t_edges,\n",
+    "        weights=dpd_intensities,\n",
+    "    )\n",
+    "    amp_values_t3, _ = jnp.histogram(\n",
+    "        dpd_phsp[\"theta_23\"].real,\n",
+    "        bins=t_edges,\n",
+    "        weights=ampform_intensities,\n",
+    "    )\n",
+    "    dpd_values_t3, _ = jnp.histogram(\n",
+    "        dpd_phsp[\"theta_23\"].real,\n",
+    "        bins=t_edges,\n",
+    "        weights=dpd_intensities,\n",
+    "    )\n",
+    "\n",
     "    global lines\n",
     "    amp_kwargs = dict(color=\"r\", label=\"ampform\", linestyle=\"solid\")\n",
     "    dpd_kwargs = dict(color=\"blue\", label=\"dpd\", linestyle=\"dotted\")\n",
     "    if lines is None:\n",
     "        sx = (s_edges[:-1] + s_edges[1:]) / 2\n",
+    "        tx = (t_edges[:-1] + t_edges[1:]) / 2\n",
     "        lines = [\n",
     "            ax_s1.step(sx, amp_values_s1, **amp_kwargs)[0],\n",
     "            ax_s1.step(sx, dpd_values_s1, **dpd_kwargs)[0],\n",
@@ -755,6 +797,12 @@
     "            ax_s2.step(sx, dpd_values_s2, **dpd_kwargs)[0],\n",
     "            ax_s3.step(sx, amp_values_s3, **amp_kwargs)[0],\n",
     "            ax_s3.step(sx, dpd_values_s3, **dpd_kwargs)[0],\n",
+    "            ax_t1.step(tx, amp_values_t1, **amp_kwargs)[0],\n",
+    "            ax_t1.step(tx, dpd_values_t1, **dpd_kwargs)[0],\n",
+    "            ax_t2.step(tx, amp_values_t2, **amp_kwargs)[0],\n",
+    "            ax_t2.step(tx, dpd_values_t2, **dpd_kwargs)[0],\n",
+    "            ax_t3.step(tx, amp_values_t3, **amp_kwargs)[0],\n",
+    "            ax_t3.step(tx, dpd_values_t3, **dpd_kwargs)[0],\n",
     "        ]\n",
     "        ax_s1.legend(loc=\"upper right\")\n",
     "    else:\n",
@@ -764,6 +812,13 @@
     "        lines[3].set_ydata(dpd_values_s2)\n",
     "        lines[4].set_ydata(amp_values_s3)\n",
     "        lines[5].set_ydata(dpd_values_s3)\n",
+    "        lines[6].set_ydata(amp_values_t1)\n",
+    "        lines[7].set_ydata(dpd_values_t1)\n",
+    "        lines[8].set_ydata(amp_values_t2)\n",
+    "        lines[9].set_ydata(dpd_values_t2)\n",
+    "        lines[10].set_ydata(amp_values_t3)\n",
+    "        lines[11].set_ydata(dpd_values_t3)\n",
+    "\n",
     "    sy_max = max(\n",
     "        jnp.nanmax(amp_values_s1),\n",
     "        jnp.nanmax(dpd_values_s1),\n",
@@ -772,9 +827,18 @@
     "        jnp.nanmax(amp_values_s3),\n",
     "        jnp.nanmax(dpd_values_s3),\n",
     "    )\n",
-    "    ax_s1.set_ylim(0, 1.05 * sy_max)\n",
-    "    ax_s2.set_ylim(0, 1.05 * sy_max)\n",
-    "    ax_s3.set_ylim(0, 1.05 * sy_max)\n",
+    "    ty_max = max(\n",
+    "        jnp.nanmax(amp_values_t1),\n",
+    "        jnp.nanmax(dpd_values_t1),\n",
+    "        jnp.nanmax(amp_values_t2),\n",
+    "        jnp.nanmax(dpd_values_t2),\n",
+    "        jnp.nanmax(amp_values_t3),\n",
+    "        jnp.nanmax(dpd_values_t3),\n",
+    "    )\n",
+    "    for ax in axes[0]:\n",
+    "        ax.set_ylim(0, 1.05 * sy_max)\n",
+    "    for ax in axes[1]:\n",
+    "        ax.set_ylim(0, 1.05 * ty_max)\n",
     "\n",
     "    fig.canvas.draw_idle()\n",
     "\n",
