FIX: allow setting negative values for couplings

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -657,16 +657,12 @@
     "    str(symbol): FloatSlider(\n",
     "        description=Rf\"\\({sp.latex(symbol)}\\)\",\n",
     "        value=complex(value).real,\n",
-    "        min=0,\n",
-    "        max=2.0 * complex(value).real,\n",
+    "        min=-2.0 * abs(complex(value).real),\n",
+    "        max=+2.0 * abs(complex(value).real),\n",
     "        continuous_update=False,\n",
-    "        step=0.01,\n",
-    "        layout=Layout(\n",
-    "            width=\"16cm\",\n",
-    "        ),\n",
-    "        style={\n",
-    "            \"description_width\": \"8cm\",\n",
-    "        },\n",
+    "        step=0.1,\n",
+    "        layout=Layout(width=\"16cm\"),\n",
+    "        style={\"description_width\": \"8cm\"},\n",
     "    )\n",
     "    for symbol, value in all_parameters.items()\n",
     "}\n",
