FIX: chose π₁ as resonance
K* is not physically allowed, because it requires the decay node to be weak

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -146,7 +146,7 @@
     "reaction = qrules.generate_transitions(\n",
     "    initial_state=INITIAL_STATE.name,\n",
     "    final_state=[p.name for p in FINAL_STATE],\n",
-    "    allowed_intermediate_particles=[\"a(0)\", \"f(0)\", \"K*\"],\n",
+    "    allowed_intermediate_particles=[\"a(0)\", \"f(0)(980)\", \"pi(1)\"],\n",
     "    mass_conservation_factor=0.2,\n",
     "    formalism=\"helicity\",\n",
     ")\n",
@@ -629,11 +629,14 @@
    "source": [
     "def to_unicode(particle: Particle) -> str:\n",
     "    unicode = particle.name\n",
+    "    unicode = unicode.replace(\"pi\", \"π\")\n",
+    "    unicode = unicode.replace(\"rho\", \"ρ\")\n",
     "    unicode = unicode.replace(\"Sigma\", \"Σ\")\n",
     "    unicode = unicode.replace(\"~\", \"\")\n",
     "    unicode = unicode.replace(\"Σ\", \"~Σ\")\n",
     "    unicode = unicode.replace(\"+\", \"⁺\")\n",
     "    unicode = unicode.replace(\"-\", \"⁻\")\n",
+    "    unicode = unicode.replace(\"(1)\", \"₁\")\n",
     "    unicode = unicode.replace(\"(0)\", \"₀\")\n",
     "    unicode = unicode.replace(\")0\", \")⁰\")\n",
     "    return unicode\n",
