--- a/docs/jpsi2pipipi.ipynb
+++ b/docs/jpsi2pipipi.ipynb
@@ -612,11 +612,14 @@
    "source": [
     "def to_unicode(particle: Particle) -> str:\n",
     "    unicode = particle.name\n",
+    "    unicode = unicode.replace(\"pi\", \"π\")\n",
+    "    unicode = unicode.replace(\"rho\", \"ρ\")\n",
     "    unicode = unicode.replace(\"Sigma\", \"Σ\")\n",
     "    unicode = unicode.replace(\"~\", \"\")\n",
     "    unicode = unicode.replace(\"Σ\", \"~Σ\")\n",
     "    unicode = unicode.replace(\"+\", \"⁺\")\n",
     "    unicode = unicode.replace(\"-\", \"⁻\")\n",
+    "    unicode = unicode.replace(\"(1)\", \"₁\")\n",
     "    unicode = unicode.replace(\"(0)\", \"₀\")\n",
     "    unicode = unicode.replace(\")0\", \")⁰\")\n",
     "    return unicode\n",
