MAINT: organize slider building cell as functions

--- a/docs/jpsi2pipipi.ipynb
+++ b/docs/jpsi2pipipi.ipynb
@@ -167,7 +167,11 @@
    },
    "outputs": [],
    "source": [
-    "resonance_names = sorted(reaction.get_intermediate_particles().names)\n",
+    "qrules_resonances = sorted(\n",
+    "    reaction.get_intermediate_particles(),\n",
+    "    key=lambda p: (p.charge, p.mass, p.name),\n",
+    ")\n",
+    "resonance_names = [p.name for p in qrules_resonances]\n",
     "resonances = [PARTICLE_DB[name] for name in resonance_names]\n",
     "Markdown(as_markdown_table(resonances))"
    ]
@@ -191,9 +195,9 @@
     "    particle_definitions: dict[str, Particle],\n",
     "    min_ls: bool = True,\n",
     ") -> ThreeBodyDecay:\n",
-    "    resonances = [particle_definitions[name] for name in resonance_names]\n",
+    "    _resonances = [particle_definitions[name] for name in resonance_names]\n",
     "    chains: list[ThreeBodyDecayChain] = []\n",
-    "    for res in resonances:\n",
+    "    for res in _resonances:\n",
     "        chains.extend(_create_isobar(res, min_ls))\n",
     "    return ThreeBodyDecay(\n",
     "        states={state_id: particle for particle, state_id in PARTICLE_TO_ID.items()},\n",
@@ -610,6 +614,36 @@
    },
    "outputs": [],
    "source": [
+    "def create_sliders() -> dict[str, FloatSlider]:\n",
+    "    all_parameters = {k: v for k, v in ampform_model.parameter_defaults.items()}\n",
+    "    all_parameters.update({k: v for k, v in dpd_model.parameter_defaults.items()})\n",
+    "    return {\n",
+    "        str(symbol): FloatSlider(\n",
+    "            description=Rf\"\\({sp.latex(symbol)}\\)\",\n",
+    "            value=complex(value).real,\n",
+    "            min=-2.0 * abs(complex(value).real),\n",
+    "            max=+2.0 * abs(complex(value).real),\n",
+    "            continuous_update=False,\n",
+    "            step=0.1,\n",
+    "            layout=Layout(width=\"16cm\"),\n",
+    "            style={\"description_width\": \"8cm\"},\n",
+    "        )\n",
+    "        for symbol, value in all_parameters.items()\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def create_resonance_selector() -> SelectMultiple:\n",
+    "    return SelectMultiple(\n",
+    "        description=\"Resonance\",\n",
+    "        options={to_unicode(p): p.latex for p in resonances},\n",
+    "        value=[resonances[0].latex, resonances[1].latex],\n",
+    "        layout=Layout(\n",
+    "            height=f\"{14 * (len(resonances)+1)}pt\",\n",
+    "            width=\"auto\",\n",
+    "        ),\n",
+    "    )\n",
+    "\n",
+    "\n",
     "def to_unicode(particle: Particle) -> str:\n",
     "    unicode = particle.name\n",
     "    unicode = unicode.replace(\"pi\", \"π\")\n",
@@ -625,34 +659,8 @@
     "    return unicode\n",
     "\n",
     "\n",
-    "resonances = ampform_model.reaction_info.get_intermediate_particles()\n",
-    "resonances = sorted(resonances, key=lambda p: (p.charge, p.mass, p.name))\n",
-    "resonance_selector = SelectMultiple(\n",
-    "    description=\"Resonance\",\n",
-    "    options={to_unicode(p): p.latex for p in resonances},\n",
-    "    value=[resonances[1].latex],\n",
-    "    layout=Layout(\n",
-    "        height=f\"{14 * (len(resonances)+1)}pt\",\n",
-    "        width=\"auto\",\n",
-    "    ),\n",
-    ")\n",
-    "\n",
-    "all_parameters = {k: v for k, v in ampform_model.parameter_defaults.items()}\n",
-    "all_parameters.update({k: v for k, v in dpd_model.parameter_defaults.items()})\n",
-    "sliders = {\n",
-    "    str(symbol): FloatSlider(\n",
-    "        description=Rf\"\\({sp.latex(symbol)}\\)\",\n",
-    "        value=complex(value).real,\n",
-    "        min=-2.0 * abs(complex(value).real),\n",
-    "        max=+2.0 * abs(complex(value).real),\n",
-    "        continuous_update=False,\n",
-    "        step=0.1,\n",
-    "        layout=Layout(width=\"16cm\"),\n",
-    "        style={\"description_width\": \"8cm\"},\n",
-    "    )\n",
-    "    for symbol, value in all_parameters.items()\n",
-    "}\n",
-    "\n",
+    "sliders = create_sliders()\n",
+    "resonance_selector = create_resonance_selector()\n",
     "ui = HBox(\n",
     "    [\n",
     "        resonance_selector,\n",
@@ -709,15 +717,17 @@
     "\n",
     "def plot_contributions(**kwargs) -> None:\n",
     "    kwargs.pop(\"resonance_selector\")\n",
-    "    resonance_names = list(resonance_selector.value)\n",
+    "    selected_resonances = list(resonance_selector.value)\n",
     "    dpd_pars = {k: v for k, v in kwargs.items() if k in dpd_func.parameters}\n",
     "    ampform_pars = {k: v for k, v in kwargs.items() if k in ampform_func.parameters}\n",
     "    ampform_func.update_parameters(ampform_pars)\n",
     "    dpd_func.update_parameters(dpd_pars)\n",
     "    ampform_intensities = compute_sub_intensities(\n",
-    "        ampform_func, ampform_phsp, resonance_names\n",
+    "        ampform_func, ampform_phsp, selected_resonances\n",
     "    )\n",
-    "    dpd_intensities = compute_sub_intensities(dpd_func, dpd_phsp, resonance_names)\n",
+    "    dpd_intensities = compute_sub_intensities(\n",
+    "        dpd_func, dpd_phsp, selected_resonances\n",
+    "    )\n",
     "\n",
     "    s_edges = jnp.linspace(0.2, 3.0, num=50)\n",
     "    amp_values_s1, _ = jnp.histogram(\n",
@@ -845,7 +855,7 @@
     "        expr: sp.Expr, parameters: dict[str, ParameterValue]\n",
     "    ) -> dict[sp.Symbol, sp.Rational]:\n",
     "        parameters = {\n",
-    "            key: value if any(r in key for r in resonance_names) else 0\n",
+    "            key: value if any(r in key for r in selected_resonances) else 0\n",
     "            for key, value in parameters.items()\n",
     "        }\n",
     "        return {\n",
