--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -167,7 +167,11 @@
    },
    "outputs": [],
    "source": [
-    "resonance_names = sorted(reaction.get_intermediate_particles().names)\n",
+    "qrules_resonances = sorted(\n",
+    "    reaction.get_intermediate_particles(),\n",
+    "    key=lambda p: (p.charge, p.mass, p.name),\n",
+    ")\n",
+    "resonance_names = [p.name for p in qrules_resonances]\n",
     "resonances = [PARTICLE_DB[name] for name in resonance_names]\n",
     "Markdown(as_markdown_table(resonances))"
    ]
@@ -627,6 +631,36 @@
    },
    "outputs": [],
    "source": [
+    "def create_sliders() -> dict[str, FloatSlider]:\n",
+    "    all_parameters = {k: v for k, v in ampform_model.parameter_defaults.items()}\n",
+    "    all_parameters.update({k: v for k, v in dpd_model.parameter_defaults.items()})\n",
+    "    return {\n",
+    "        str(symbol): FloatSlider(\n",
+    "            description=Rf\"\\({sp.latex(symbol)}\\)\",\n",
+    "            value=complex(value).real,\n",
+    "            min=-2.0 * abs(complex(value).real),\n",
+    "            max=+2.0 * abs(complex(value).real),\n",
+    "            continuous_update=False,\n",
+    "            step=0.1,\n",
+    "            layout=Layout(width=\"16cm\"),\n",
+    "            style={\"description_width\": \"8cm\"},\n",
+    "        )\n",
+    "        for symbol, value in all_parameters.items()\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def create_resonance_selector() -> SelectMultiple:\n",
+    "    return SelectMultiple(\n",
+    "        description=\"Resonance\",\n",
+    "        options={to_unicode(p): p.latex for p in resonances},\n",
+    "        value=[resonances[0].latex, resonances[1].latex],\n",
+    "        layout=Layout(\n",
+    "            height=f\"{14 * (len(resonances)+1)}pt\",\n",
+    "            width=\"auto\",\n",
+    "        ),\n",
+    "    )\n",
+    "\n",
+    "\n",
     "def to_unicode(particle: Particle) -> str:\n",
     "    unicode = particle.name\n",
     "    unicode = unicode.replace(\"pi\", \"π\")\n",
@@ -642,34 +676,8 @@
     "    return unicode\n",
     "\n",
     "\n",
-    "resonances = ampform_model.reaction_info.get_intermediate_particles()\n",
-    "resonances = sorted(resonances, key=lambda p: (p.charge, p.mass, p.name))\n",
-    "resonance_selector = SelectMultiple(\n",
-    "    description=\"Resonance\",\n",
-    "    options={to_unicode(p): p.latex for p in resonances},\n",
-    "    value=[resonances[0].latex, resonances[1].latex],\n",
-    "    layout=Layout(\n",
-    "        height=f\"{14 * (len(resonances)+1)}pt\",\n",
-    "        width=\"auto\",\n",
-    "    ),\n",
-    ")\n",
-    "\n",
-    "all_parameters = {k: v for k, v in ampform_model.parameter_defaults.items()}\n",
-    "all_parameters.update({k: v for k, v in dpd_model.parameter_defaults.items()})\n",
-    "sliders = {\n",
-    "    str(symbol): FloatSlider(\n",
-    "        description=Rf\"\\({sp.latex(symbol)}\\)\",\n",
-    "        value=complex(value).real,\n",
-    "        min=-2.0 * abs(complex(value).real),\n",
-    "        max=+2.0 * abs(complex(value).real),\n",
-    "        continuous_update=False,\n",
-    "        step=0.1,\n",
-    "        layout=Layout(width=\"16cm\"),\n",
-    "        style={\"description_width\": \"8cm\"},\n",
-    "    )\n",
-    "    for symbol, value in all_parameters.items()\n",
-    "}\n",
-    "\n",
+    "sliders = create_sliders()\n",
+    "resonance_selector = create_resonance_selector()\n",
     "ui = HBox(\n",
     "    [\n",
     "        resonance_selector,\n",
