FIX: match coupling values

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -634,10 +634,18 @@
     "def create_sliders() -> dict[str, FloatSlider]:\n",
     "    all_parameters = {k: v for k, v in ampform_model.parameter_defaults.items()}\n",
     "    all_parameters.update({k: v for k, v in dpd_model.parameter_defaults.items()})\n",
-    "    return {\n",
-    "        str(symbol): FloatSlider(\n",
+    "    sliders = {}\n",
+    "    for symbol, value in all_parameters.items():\n",
+    "        value = complex(value).real\n",
+    "        if (\n",
+    "            symbol.name.startswith(R\"\\mathcal{H}^\\mathrm{decay}\")\n",
+    "            and \"+\" in symbol.name\n",
+    "        ):\n",
+    "            if any(s in symbol.name for s in [\"{1}\", \"*\", \"rho\"]):\n",
+    "                value *= -1\n",
+    "        sliders[symbol.name] = FloatSlider(\n",
     "            description=Rf\"\\({sp.latex(symbol)}\\)\",\n",
-    "            value=complex(value).real,\n",
+    "            value=value,\n",
     "            min=-2.0 * abs(complex(value).real),\n",
     "            max=+2.0 * abs(complex(value).real),\n",
     "            continuous_update=False,\n",
@@ -645,8 +653,7 @@
     "            layout=Layout(width=\"16cm\"),\n",
     "            style={\"description_width\": \"8cm\"},\n",
     "        )\n",
-    "        for symbol, value in all_parameters.items()\n",
-    "    }\n",
+    "    return sliders\n",
     "\n",
     "\n",
     "def create_resonance_selector() -> SelectMultiple:\n",
@@ -670,8 +677,8 @@
     "    unicode = unicode.replace(\"Σ\", \"~Σ\")\n",
     "    unicode = unicode.replace(\"+\", \"⁺\")\n",
     "    unicode = unicode.replace(\"-\", \"⁻\")\n",
-    "    unicode = unicode.replace(\"(1)\", \"₁\")\n",
     "    unicode = unicode.replace(\"(0)\", \"₀\")\n",
+    "    unicode = unicode.replace(\"(1)\", \"₁\")\n",
     "    unicode = unicode.replace(\")0\", \")⁰\")\n",
     "    return unicode\n",
     "\n",
